# backend/src/main/java/com/tfp/timetracking/identity/application/AccessTokenGenerator.java
@@ -1,8 +1,9 @@
 package com.tfp.timetracking.identity.application;
 
 import com.tfp.timetracking.identity.domain.User;
+import java.util.UUID;
 
 public interface AccessTokenGenerator {
 
-    IssuedAccessToken generate(User user);
+    IssuedAccessToken generate(User user, UUID sessionId);
 }
